<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Taustakuva -->
    <ImageView
        android:id="@+id/backgroundImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true" />

    <!-- Nappulat, jotka valitsevat kaupungin -->
    <Button
        android:id="@+id/buttonHelsinki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_helsinki"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonEspoo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_espoo"
        app:layout_constraintTop_toBottomOf="@id/buttonHelsinki"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/buttonTampere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_tampere"
        app:layout_constraintTop_toBottomOf="@id/buttonEspoo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
